--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 __pycache__/app.cpython-311.pyc
+__pycache__/app.cpython-311.pyc
+__pycache__/classes.cpython-311.pyc
+__pycache__/rotas.cpython-311.pyc
+db.json
+tempdb.jason
