concertei o uvicorn automatico

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ __pycache__/classes.cpython-311.pyc
 __pycache__/rotas.cpython-311.pyc
 db.json
 tempdb.jason
+__pycache__/rotas.cpython-311.pyc
+__pycache__/test.cpython-311.pyc
